# mbs_aloha

./: README.md  dependencies.sh
src/aloha/: 99-aloha.rules
src/aloha/aloha-main/aloha_scripts/: left_side_teleop.py  right_side_teleop.py
src/aloha/aloha-main/launch/: 4arms_teleop.launch  4cams.launch
src/aloha/aloha_realsense_cameras/: CMakeLists.txt  package.xml
src/aloha/aloha_realsense_cameras/launch/: d405_01.launch  d405_02.launch  d405_03.launch  d405_04.launch  realsense.launch
src/aloha/aloha_viz/: CMakeLists.txt  package.xml
src/aloha/aloha_viz/launch/: view_robot.launch
src/aloha/aloha_viz/rviz/: robot.rviz
src/aloha/interbotix_ros_toolboxes-noetic/interbotix_xs_toolbox/interbotix_xs_modules/src/interbotix_xs_modules/: arm.py
src/realsense/realsense2_camera/: CMakeLists.txt
