<?xml version="1.0"?>
<package format="2">
  <name>aloha_realsense_cameras</name>
  <version>1.3.0</version>
  <description>Realsense cameras drivers.</description>
  <maintainer email="support@mybotshop.de">Proprietary</maintainer>
  <license>Proprietary</license> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <exec_depend>realsense2_camera</exec_depend>
</package>
